--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-packager . --platform=darwin --arch=x64"
+    "build": "electron-packager . --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "author": "Denis Zyulev",
