--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "devDependencies": {
     "electron": "^1.8.2",
+    "electron-config": "^1.0.0",
     "electron-packager": "^11.0.1",
     "electron-prebuilt": "^1.4.13",
     "electron-rebuild": "^1.7.3"
