--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "license": "MIT",
   "devDependencies": {
     "electron": "^1.8.2",
-    "electron-config": "^1.0.0",
     "electron-packager": "^11.0.1",
     "electron-prebuilt": "^1.4.13",
     "electron-rebuild": "^1.7.3"
@@ -26,6 +25,7 @@
   },
   "homepage": "https://github.com/electron/electron-quick-start#readme",
   "dependencies": {
-    "node-notifier": "^5.2.1"
+    "node-notifier": "^5.2.1",
+    "electron-config": "^1.0.0"
   }
 }
